--- a/ironforge-tp1-quarkus/src/main/resources/application.properties
+++ b/ironforge-tp1-quarkus/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-%dev.quarkus.datasource.db-kind=postgresql 
+%dev.quarkus.datasource.db-kind=postgresql
 %dev.quarkus.datasource.username=topicos1
 %dev.quarkus.datasource.password=root
-
 %dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/ironforge_topicos1db
 %dev.quarkus.hibernate-orm.database.generation=drop-and-create
-%dev.quarkus.hibernate-orm=log.sql=true
+
+# Habilitar log de SQL
+%dev.quarkus.hibernate-orm.log.sql=true
+%dev.quarkus.hibernate-orm.log.bind-parameters=true
