--- a/ironforge-tp1-quarkus/pom.xml
+++ b/ironforge-tp1-quarkus/pom.xml
@@ -70,9 +70,9 @@
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.13.3</version>
-        </dependency>
+            <artifactId>jackson-core</artifactId>
+            <version>2.18.0</version>
+        </dependency>        
     </dependencies>
 
     <build>
