:test_tube: test: sabor resource teste

--- a/ironforge-tp1-quarkus/src/main/resources/application.properties
+++ b/ironforge-tp1-quarkus/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+###---------DESENVOLVIMENTO----------------###
+
 %dev.quarkus.datasource.db-kind=postgresql
 %dev.quarkus.datasource.username=topicos1
 %dev.quarkus.datasource.password=root
@@ -7,3 +9,11 @@
 # Habilitar log de SQL
 %dev.quarkus.hibernate-orm.log.sql=true
 %dev.quarkus.hibernate-orm.log.bind-parameters=true
+
+###---------TESTES----------------###
+
+%test.quarkus.datasource.db-kind=postgresql
+%test.quarkus.datasource.username=topicos1
+%test.quarkus.datasource.password=root
+%test.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/ironforge_topicos1db
+
