--- a/ironforge-tp1-quarkus/pom.xml
+++ b/ironforge-tp1-quarkus/pom.xml
@@ -72,7 +72,16 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>2.18.0</version>
-        </dependency>        
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-jwt</artifactId>
+          </dependency>
+      
+          <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-jwt-build</artifactId>
+          </dependency>        
     </dependencies>
 
     <build>
