--- a/ironforge-tp1-quarkus/src/main/resources/application.properties
+++ b/ironforge-tp1-quarkus/src/main/resources/application.properties
@@ -17,3 +17,9 @@
 %test.quarkus.datasource.password=root
 %test.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/ironforge_topicos1db
 
+
+###---------JWT CONFIG----------------###
+mp.jwt.verify.publickey.location=token/publicKey.pem
+mp.jwt.verify.issuer=unitins-jwt
+smallrye.jwt.sign.key.location=token/privateKey.pem
+
