feat: uso de logs e package do projeto

--- a/ironforge-tp1-quarkus/src/main/resources/application.properties
+++ b/ironforge-tp1-quarkus/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 ###---------DESENVOLVIMENTO----------------###
 
-%dev.quarkus.datasource.db-kind=postgresql
-%dev.quarkus.datasource.username=topicos1
-%dev.quarkus.datasource.password=root
-%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/ironforge_topicos1db
-%dev.quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=topicos1
+quarkus.datasource.password=root
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/ironforge_topicos1db
+quarkus.hibernate-orm.database.generation=drop-and-create
 
 # Habilitar log de SQL
-%dev.quarkus.hibernate-orm.log.sql=true
-%dev.quarkus.hibernate-orm.log.bind-parameters=true
+quarkus.hibernate-orm.log.sql=false
+quarkus.hibernate-orm.log.bind-parameters=false
 
 ###---------TESTES----------------###
 
@@ -22,4 +22,23 @@
 mp.jwt.verify.publickey.location=token/publicKey.pem
 mp.jwt.verify.issuer=unitins-jwt
 smallrye.jwt.sign.key.location=token/privateKey.pem
+
+###---------CONFIGURACAO DOS LOGS----------------###
+
+##CONFIGURACAO GERAL DO LOG
+quarkus.log.level=INFO
+
+quarkus.log.category."br.unitins.tp1.ironforge.resource.EstadoResource".level=DEBUG
+
+#CONFIGURACAO DE LOG NO CONSOLE
+quarkus.log.console.color=true
+quarkus.log.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t)%s%e%n
+
+#CONFIGURACAO DE ARQUIVO DE LOG
+quarkus.log.file.enable=true
+quarkus.log.file.path=C:/Users/55639/quarkus/ironforge/logs/tmp/trace.log
+quarkus.log.file.level=DEBUG
+quarkus.log.file.format=%d{dd-MM-yyyy HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.file.rotation.file-suffix=.dd.MM.yyyy
+
 
