--- a/ironforge-tp1-quarkus/pom.xml
+++ b/ironforge-tp1-quarkus/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>quarkus-resteasy-multipart</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-scheduler</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
