logs e roles allowed

--- a/ironforge-tp1-quarkus/src/main/resources/application.properties
+++ b/ironforge-tp1-quarkus/src/main/resources/application.properties
@@ -26,12 +26,12 @@ smallrye.jwt.sign.key.location=token/privateKey.pem
 ###---------CONFIGURACAO DOS LOGS----------------###
 
 ##CONFIGURACAO GERAL DO LOG
-quarkus.log.level=INFO
+# quarkus.log.level=INFO
 
 quarkus.log.category."br.unitins.tp1.ironforge.resource.EstadoResource".level=DEBUG
 
 #CONFIGURACAO DE LOG NO CONSOLE
-quarkus.log.console.color=true
+quarkus.log.console.color=false
 quarkus.log.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t)%s%e%n
 
 #CONFIGURACAO DE ARQUIVO DE LOG
