--- a/ironforge-tp1-quarkus/pom.xml
+++ b/ironforge-tp1-quarkus/pom.xml
@@ -95,6 +95,12 @@
             <artifactId>quarkus-scheduler</artifactId>
         </dependency>
 
+         <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-test-security</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
